Criação da telas e ajustes no controlador de produtos

--- a/controle-estoque-web/src/main/resources/application.properties
+++ b/controle-estoque-web/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.data.mongodb.database=controleestoquewebdb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
+spring.thymeleaf.template-loader-path: classpath:/templates
+spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache: false
