--- a/controle-estoque-web/pom.xml
+++ b/controle-estoque-web/pom.xml
@@ -40,8 +40,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>org.projectlombok</groupId>
-    		<artifactId>lombok</artifactId>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.16.20</version>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.thymeleaf</groupId>
+		    <artifactId>thymeleaf</artifactId>
 		</dependency>
 	</dependencies>
 
