Controlador de venda; tags do thymeleaf nas JSPs; configurações para EntityScan e ComponentScan

--- a/controle-estoque-web/src/main/resources/application.properties
+++ b/controle-estoque-web/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 spring.thymeleaf.template-loader-path: classpath:/templates
-spring.thymeleaf.suffix: .html
+spring.thymeleaf.suffix: .jsp
 spring.thymeleaf.cache: false
