--- a/controle-estoque-web/src/main/resources/application.properties
+++ b/controle-estoque-web/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.data.mongodb.database=controleestoquewebdb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
-spring.thymeleaf.template-loader-path: classpath:/templates
-spring.thymeleaf.suffix: .html
-spring.thymeleaf.cache: false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
